[burak.ozturk][Splash ve CreateShip Activity Eklendi]

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Outer Worlds</string>
+    <string name="app_title">Outer Worlds Colony</string>
 </resources>
